[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/components/PreviewSideButtonBase/PreviewSideButtonBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/screens/Practice/components/OptionPreview/components/OptionButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/screens/Practice/components/OptionPreview/OptionPreview.gd" type="Script" id=3]

[node name="OptionPreview" type="Control"]
margin_right = 756.0
margin_bottom = 342.0
rect_min_size = Vector2( 0, 342 )
script = ExtResource( 3 )

[node name="Layout" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 12

[node name="LeftButton" parent="Layout" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 116.0
margin_bottom = 342.0
rect_min_size = Vector2( 116, 0 )

[node name="OptionButton" parent="Layout" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 128.0
margin_right = 628.0
margin_bottom = 342.0
rect_min_size = Vector2( 500, 0 )

[node name="RightButton" parent="Layout" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 640.0
margin_right = 756.0
margin_bottom = 342.0
rect_min_size = Vector2( 116, 0 )
